# rust-axum-postgreSQL

./: Cargo.toml  NoteApp.postman_collection.json  README.md  makefile
src/: handler.rs  main.rs  route.rs  schema.rs
