[package]
name = "rust-axum-postgreSQL"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = {version = "1.0.197" , features = ["derive"]}
serde_json = "1.0.115"
tokio = {version = "1.37.0" , features = ["full"]}
dotenv = "0.15.0"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
chrono = { version = "0.4.24", features = ["serde"] }
tower-http = { version = "0.5.0", features = ["cors"] }